testsuite/tests/typecheck/should_fail/T20122.stderr

T20122.hs:11:7: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘test’
      prevents the constraint ‘(Testable a0)’ from being solved.
      Relevant bindings include
        foo :: a0 -> Bool (bound at T20122.hs:11:1)
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      This potential instance exists:
        instance Testable A
          -- Defined at T20122.hs:8:10
    • In the expression: test
      In an equation for ‘foo’: foo = test
